Fix edge to edge problem on mobile screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,8 +23,8 @@
 
   html {
     scroll-behavior: smooth;
-    overflow-x: clip;
-    max-width: 100vw;
+    overflow-x: hidden;
+    max-width: 100%;
     position: relative;
   }
 
@@ -36,8 +36,8 @@
     margin: 0;
     padding: 0;
     -webkit-font-smoothing: antialiased;
-    overflow-x: clip;
-    max-width: 100vw;
+    overflow-x: hidden;
+    max-width: 100%;
     position: relative;
   }
 
@@ -54,7 +54,7 @@
     height: 100%;
     margin: 0 auto;
     padding: 40px 20px;
-    overflow-x: clip;
+    overflow-x: hidden;
   }
 
   .nav-header {
